#3 registrando eventos
